# EmbedX_Course

./: README.md
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/: CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/51soft_timer/: ExTimer.c  ExTimer.h  main.c  softTimer.uvgui.Administrator  softTimer.uvopt  softTimer.uvproj
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/51soft_timer/Listings/: ExTimer.lst  STARTUP.lst  main.lst  softTimer.m51
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/51soft_timer/Objects/: ExTimer.__i  softTimer  softTimer.build_log.htm  softTimer.hex  softTimer.lnp
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/EmbedX_Nano/: CMakeLists.txt
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/EmbedX_Nano/Exlib/ExUtils/: exUtils.h
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/EmbedX_Nano/component/ExFsm/: exFsm.c  exFsm.h
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/EmbedX_Nano/component/Extimer/: ExTimer.c  ExTimer.h
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/app/: main.c
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/bsp/: CMakeLists.txt  cmake_install.cmake
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/bsp/it/: stm32f1xx_it.c
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/bsp/sys/: sys.c
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/libraries/: cmake_install.cmake
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/project/EIDE/.eide/: eide.json
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/project/GCC/scripts/jflash/: stm32f103ze.jflash
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/project/MDK/: template.uvguix.Administrator
Nano_example/Extimer_example/EmbedX_Nano_template_stm32f103ze/project/MDK/Objects/: main.d  startup_stm32f103xe.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_pwr.crf  stm32f1xx_hal_pwr.d  stm32f1xx_hal_tim.crf  stm32f1xx_hal_tim_ex.d  stm32f1xx_it.d  system_stm32f1xx.crf  template.lnp
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/: README.md
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/EmbedX_Nano/component/Extimer/: ExTimer.c
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/app/: main.c
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/bsp/: CMakeLists.txt
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/bsp/it/: stm32f1xx_it.c
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/bsp/sys/: sys.h
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/project/AURIX/TC264D_template_EmbedX_Nano/: .cproject  .project  尽量不要使用的引脚.txt
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/project/GCC/scripts/clangd/: .clangd
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/project/GCC/scripts/cmake/internal/: armgcc.cmake
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/project/MDK/: template.uvoptx  template.uvprojx
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/project/MDK/Listings/: startup_stm32f103xe.lst  template.map
Nano_example/build_example/EmbedX_Nano_template_stm32f103ze/project/MDK/Objects/: delay.crf  main.crf  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_rcc.d  sys.crf  sys.d  template.build_log.htm
example/EmbedX_Nano_template_stm32f103ze/: CMakeLists.txt
example/EmbedX_Nano_template_stm32f103ze/EmbedX_Nano/component/Extimer/: ExTimer.h
example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/core/GCC/: STM32F103ZETx_FLASH.ld
example/EmbedX_Nano_template_stm32f103ze/platform/mcu/stm32f103ze/libraries/: CMakeLists.txt
example/EmbedX_Nano_template_stm32f103ze/project/EIDE/: EIDE.code-workspace
example/EmbedX_Nano_template_stm32f103ze/project/EIDE/.eide/: eide.json
example/EmbedX_Nano_template_stm32f103ze/project/GCC/scripts/cmake/: armgcc_cm3.cmake
example/EmbedX_Nano_template_stm32f103ze/project/MDK/Objects/: delay.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_rcc.crf  stm32f1xx_hal_rcc_ex.crf  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.crf  stm32f1xx_hal_uart.crf  stm32f1xx_hal_uart.d  stm32f1xx_it.crf  system_stm32f1xx.d  template.axf  template.hex  template.htm  template_Target 1.dep
(+2 files in other folders)
